--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-api-middleware": "^3.2.1",
-    "rollup": "^2.10.0"
+    "rollup": "^2.10.0",
+    "hot-formula-parser": "^4.0.0"
   },
   "files": [
     "dist"
