--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
     "redux": "^4.0.5",
     "redux-api-middleware": "^3.2.1",
     "rollup": "^2.10.0",
-    "hot-formula-parser": "^4.0.0"
   },
   "files": [
     "dist"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "hot-formula-parser": "^4.0.0
+  }
 }
