--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -27,12 +27,16 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: olegtarasov/get-tag@v2.1
+        id: tagName
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
           scope: openimis
+      - name: update the version with TAG
+        run: echo $(jq --arg a "$GIT_TAG_NAME" '.version = ($a)' package.json) >  package.json
       - run: yarn install
       - run: yarn build    
       - run: npm publish --access public
@@ -43,11 +47,15 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: olegtarasov/get-tag@v2.1
+        id: tagName
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
+      - name: update the version with TAG
+        run: echo $(jq --arg a "$GIT_TAG_NAME" '.version = ($a)' package.json) >  package.json
       - run: yarn install
       - run: yarn build    
       - run: npm publish
