--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "rollup -c",
     "start": "rollup -c -w",
-    "prepare":"yarn run build"
+    "prepare":"npm run build"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
